<resources>
    <string name="app_name">message_app</string>
    <string name="greeting">Hello</string>
    <string name="main_message">Main Message</string>
    <string name="button_message">Message</string>
    <string name="lets_begin">Let\'s begin?</string>
    <string name="type_your_name">type your name</string>
    <string name="save_button">Save</string>
    <string name="valid_name">Please type a valid name!</string>
</resources>