<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/green"

    tools:context=".UserActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"

        android:text="@string/lets_begin"
        android:textSize="32sp"
        android:textColor="@color/white"
        />
    
    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/header_text"

        android:layout_margin="48dp"

        android:hint="@string/type_your_name"
        android:textSize="24sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/editName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"

        android:text="@string/save_button"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        />


</RelativeLayout>