<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="16dp"

    android:orientation="vertical"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="4dp"

        android:background="@color/green"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40sp"

            android:layout_weight="1"

            android:src="@drawable/ic_sun"
            app:tint="@color/white" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40sp"

            android:layout_weight="1"

            android:src="@drawable/ic_rain"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40sp"

            android:layout_weight="1"

            android:src="@drawable/ic_happy"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/greeting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/linear_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"

        android:text="@string/greeting"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/main_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"

        android:text="@string/main_message"
        android:textSize="24sp"
        />

    <View
        android:layout_width="128dp"
        android:layout_height="5dp"

        android:layout_below="@+id/main_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"

        android:background="@color/green"
        />

    <Button
        android:id="@+id/message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"

        android:text="@string/button_message"

        android:backgroundTint="@color/green"
        />


</RelativeLayout>